--- a/_posts/2021-11-16-opengles.md
+++ b/_posts/2021-11-16-opengles.md
@@ -69,6 +69,28 @@ android {
 }
 ```
 
+- xml에서 binding을 사용하도록 설정합시다.
+```
+<?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
+
+        <android.opengl.GLSurfaceView
+            android:id="@+id/surfaceView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
+```
+
 - MainActivity에 작성해줍니다.
 ```
 class MainActivity : AppCompatActivity() {
