--- a/_posts/2021-11-16-opengles.md
+++ b/_posts/2021-11-16-opengles.md
@@ -49,7 +49,39 @@ categories: android, openGLES
   
 ---
 
+# EGL(Embeded-system Graphics Library)
+
+---
+
+- OpenGL에게 그림을 그릴 수 있는 환경을 제공해 주기 위한 기능이 정의된 API 
+- Graphic Context 관리 및 서비스와 버퍼를 바인딩, 렌더링 동기화 제어를 담당
+- 안드로이드에서는 "javax.microedition.khronos.egl" pacakage에 EGL, EGL10, EGL11의 인터페이스와 EGLConfig, EGLContext, EGLDisplay, EGLSurface 클래스가 제공되고
+API 17부터는 "android.opengl" 패키지에서 EGL14, EGLConfig, EGLContext, EGLDisplay, EGLExt, EGLObjectHandle, EGLSurface 클래스가 제공된다.
+  
+- OpenGL을 그리기 위한 화면 설정절차는 다음과 같다.
+  - Android 용 화면(Surface 또는 SurfaceTexture) 생성 및 EGL 객체 생성 - EGLContext.getEGL()
+  - EGLDisplay 생성 - eglDisplay(EGL_DEFAULT_DISPLAY)
+  - 초기화 - eglInitialize()
+  - EGLContext 생성 - eglCreateContext(), 이 때 attribute list에 EGL_CONTEXT_CLIENT_VERSION 설정 및 eglChooseConfig() 로 원하는 EGLConfig 객체 검색
+  - EGLSurface 생성 - eglCreateWindowSurface(), 이 때 native window로 Surface, SurfaceHolder, SurfaceTexture 사용 가능
+  - Context 활성화 - eglMakeCurrent()
+  - GLES20, GLES30, GLES31 등을 이용하여 그리기 진행
+  - 그린 내용을 화면에 출력 - eglSwapBuffers()
+
+---
+
+# OpenGL ES PipeLine
+
+---
+
+- OpenGL ES에서 Object가 그려지는 과정을 단계별로 나누어 진행하는 것을 말한다. 각 단계는 앞 단계에서의 처리 결과를 받아 뒤 단계에서 처리하도록 되어 있으며, 동일한 단계에서는 서로 독립되어 처리되기 때문에 병렬 처리가 가능하다.
+- OpenGL ES에서는 PipeLine의 이러한 병렬 실행이 가능한 특징을 이용하여 낮은 가격의 연산기를 여러 개 붙여 빠른 시간에 계산 결과를 얻을 수 있도록 만들어진 GPU가 일반적으로 사용된다.
+
+---
+
 # GLSufaceView에 빨간색 색칠하기
+
+---
 
 - 먼저 매니페스트에 2.0 버전을 추가해줍니다.
 
@@ -127,7 +159,8 @@ class MainActivity : AppCompatActivity() {
 
 ## 참고자료
 
-[유튜브 채널 T아카데미](https://youtu.be/PjroUrwpfRE),
+[유튜브 채널 T아카데미](https://youtu.be/PjroUrwpfRE)
+
 [공식 홈페이지](https://developer.android.com/training/graphics/opengl/environment?hl=ko)
 
 ---
