--- a/_posts/2022-09-10-compose-doc_03.md
+++ b/_posts/2022-09-10-compose-doc_03.md
@@ -57,7 +57,33 @@ fun MyComposable() {
 
 ## 컴포지션 내 컴포저블의 분석
 
-컴포지션 내 컴포저블의 인스턴스는 호출 사이트로 식별된다. Compose 컴파일러는 각 호출 사이트를 고유한 것으로 간주한다.
-여러 호출 사이트에서 컴포저블을 호출하면 컴포지션에 컴포저블의 여러 인스턴스가 생성된다.
+컴포지션 내 컴포저블의 인스턴스는 호출 사이트로 식별된다. Compose 컴파일러는 각 호출 사이트를 고유한 것으로 간주한다. 여러 호출 사이트에서 컴포저블을 호출하면 컴포지션에 컴포저블의 여러 인스턴스가 생성된다.
 
 > 핵심 용어: 호출 사이트는 컴포저블이 호출되는 소스 코드 위치다. 호출 사이트는 컴포지션 내 위치와 UI 트리에 영향을 미친다.
+
+리컴포지션 시 컴포저블이 이전 컴포지션 시 호출한 것과 다른 컴포저블을 호출하는 경우 Compose는 호출되거나 호출되지 않은 컴포저블을 식별하며 두 컴포지션 모두에서 호출된 컴포저블의 경우 입력이 변경되지 않은
+경우 재구성하지 않는다.
+
+부수 효과를 컴포저블과 연결하기 위해서는 리컴포지션마다 다시 시작하는 대신 완료할 수 있도록 ID를 유지하는 것이 중요하다.
+
+다음 예를 참고해보자.
+
+```
+@Composable
+fun LoginScreen(showError: Boolean) {
+    if (showError) {
+        LoginError()
+    }
+    LoginInput()
+}
+
+@Composable
+fun LoginInput() { /* ... */ }
+```
+
+위의 코드 스니펫에서 `LoginScreen`은 `LoginError` 컴포저블을 조건부로 호출하며 항상 `LoginInput` 컴포저블을 호출한다.
+각 호출에는 고유한 호출 사이트 및 컴파일러가 고유하게 식별하는 데 사용하는 소스 위치가 존재한다.
+
+![](https://developer.android.com/static/images/jetpack/compose/lifecycle-showerror.png?hl=ko)
+
+그림 3. 상태가 변경되고 리컴포지션이 발생할 때 컴포지션 내 `LoginScreen`의 표현. 색상이 동일하면 재구성되지 않았음을 의미한다.
