--- a/_posts/2022-09-05-compose-doc_02.md
+++ b/_posts/2022-09-05-compose-doc_02.md
@@ -1,7 +1,10 @@
 ---
+layout: post
 title: "Jetpack Compose 상태관리 - 공식문서 읽어보기"
 date: 2022-09-10 09:20:00 -0400 
 categories: android
+tags: android, compose
+comments: 1
 ---
 
 # 상태 및 Jetpack Compose
