--- a/_posts/2022-09-05-compose-doc_02.md
+++ b/_posts/2022-09-05-compose-doc_02.md
@@ -7,7 +7,7 @@ tags: android, compose
 comments: 1
 ---
 
-# 상태 및 Jetpack Compose
+상태 및 Jetpack Compose
 
 앱의 상태는 시간이 지남에 따라 변할 수 있는 값이다. 이는 매우 광범위한 정의로서 Room 데이터베이스부터 클래스 변수까지 모든 항목이 포함된다.
 
