--- a/_posts/2024-09-04-daangn.md
+++ b/_posts/2024-09-04-daangn.md
@@ -27,9 +27,7 @@ comments: 1
 
 면접 전날까지 나는 내 경력에 대해 정리하고 이력서 기반 면접이라는 것에만 몰두해서 준비했었다.
 
-그렇게 03.07 면접 당일, 이번 면접은 다니고 있던 회사 근처에 있는 어떤 비즈센터에서 진행했었다.
-
-면접은 오후 3시부터 4시까지 한시간 정도 봤었다.
+그렇게 03.07 면접 당일, 이번 면접은 오후 3시 ~ 4시까지로 다니고 있던 회사 근처에 있는 어떤 비즈센터에서 진행했었다.
 
 첫 질문이 CS 질문으로 내 생각과 달랐던 면접에 당황했었다.
 
@@ -38,3 +36,15 @@ comments: 1
 물론 당황하면 그럴 수 있지만, 이것 역시 나의 역량 부족이다.
 
 결과는 예상했던 대로 탈락이었으며, 지금은 다니던 회사를 퇴사하고 3개월째 구직 활동을 진행중이다.
+
+---
+
+먼저, 비즈센터에서 최대한 조용한 회의실에서 면접을 진행하고 싶었는데,
+
+회의 초반부터 와이파이 상태도 안좋고,
+
+복도에서는 갑자기 안하던 공사 소음에
+
+옆 회의실에서는 문을 쾅쾅는 소리까지.
+
+집중이 안되고 내가 말을 해도 와이파이 때문에 제대로 전달이 안되는 상황도 발생해, 멘탈이 나간 상태로 면접을 진행했었던거 같다.(다음 면접 부터는 그냥 집에서 봐야지..)
